--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "framer-motion": "^12.4.7",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.508.0",
     "mongoose": "^8.9.5",
     "multer": "^1.4.5-lts.1",
     "react": "^18.3.1",
